[gd_scene load_steps=3 format=3 uid="uid://de3skmw3txim3"]

[ext_resource type="Script" path="res://components/TrophyAchivements.gd" id="1_ys8hm"]
[ext_resource type="Texture2D" uid="uid://b5y1224xn0xmj" path="res://icon.svg" id="2_hgc4b"]

[node name="TrophyAchivements" type="Control"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 3
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.698
offset_top = -324.0
offset_right = -652.0
offset_bottom = -324.304
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
script = ExtResource("1_ys8hm")

[node name="IconTrophy" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("2_hgc4b")
expand_mode = 1

[node name="TitleTrophyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 137.0
offset_top = -31.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="DescriptionTrophyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 137.0
offset_top = 9.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
